feat: update test, finalize impl
